fixed the z-index bug

--- a/src/pages/Audio/audio.css
+++ b/src/pages/Audio/audio.css
@@ -24,3 +24,10 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, .16), 0 1px 3px rgba(0, 0, 0, .23);
   padding-inline: .6rem;
 }
+
+.aud__container {}
+
+audio {
+  z-index: -106969;
+  /* display: none; */
+}
